--- a/e2e-app/src/app/datepicker/autoclose/datepicker-autoclose.component.html
+++ b/e2e-app/src/app/datepicker/autoclose/datepicker-autoclose.component.html
@@ -1,17 +1,19 @@
 <h3>
   Datepicker autoclose tests
-  <span class="ml-1 badge {{d.isOpen() ? 'badge-success' : 'badge-danger'}}" id="open-status">{{d.isOpen() ? 'open' : 'closed'}}</span>
+  <span class="ml-1 badge {{d.isOpen() ? 'badge-success' : 'badge-danger'}}"
+    id="open-status">{{d.isOpen() ? 'open' : 'closed'}}</span>
 </h3>
 
 <form id="default" (contextmenu)="$event.preventDefault()">
   <div class="form-group form-inline">
     <div class="input-group">
       <input class="form-control" name="dp" placeholder="yyyy-mm-dd" #d="ngbDatepicker" ngbDatepicker
-             [autoClose]="autoClose" [(ngModel)]="model" [displayMonths]="displayMonths">
+        [autoClose]="autoClose" [(ngModel)]="model" [displayMonths]="displayMonths">
       <div class="input-group-append">
         <button class="btn btn-outline-secondary" type="button" id="toggle" (click)="d.toggle()">Toggle</button>
         <button class="btn btn-outline-secondary" type="button" id="close" (click)="d.close()">Close</button>
-        <button class="btn btn-outline-secondary" type="button" id="selectDate" (click)="model = {year: 2018, month: 8, day: 10}">10
+        <button class="btn btn-outline-secondary" type="button" id="selectDate"
+          (click)="model = {year: 2018, month: 8, day: 10}">10
           AUG 2018</button>
       </div>
     </div>
