--- a/e2e-app/src/app/popover/autoclose/popover-autoclose.component.html
+++ b/e2e-app/src/app/popover/autoclose/popover-autoclose.component.html
@@ -1,17 +1,20 @@
 <h3>
   Popover autoclose tests
-  <span class="ml-1 badge {{d.isOpen() ? 'badge-success' : 'badge-danger'}}" id="open-status">{{d.isOpen() ? 'open' : 'closed'}}</span>
+  <span class="ml-1 badge {{d.isOpen() ? 'badge-success' : 'badge-danger'}}"
+    id="open-status">{{d.isOpen() ? 'open' : 'closed'}}</span>
 </h3>
 
 <form id="default" (contextmenu)="$event.preventDefault()">
   <div class="form-group form-inline">
 
-    <button #d="ngbPopover" ngbPopover="Popover here" [autoClose]="autoClose" triggers="click" type="button" class="btn btn-outline-secondary ml-2">
+    <button #d="ngbPopover" id="target" ngbPopover="Popover here" [autoClose]="autoClose" placement="right"
+      triggers="click" type="button" class="btn btn-outline-secondary ml-2">
       Popover
     </button>
 
     <div ngbDropdown class="d-inline-block ml-3">
-      <button class="btn btn-outline-secondary" id="autoclose-dropdown" ngbDropdownToggle>Choose Autoclose</button>
+      <button class="btn btn-outline-secondary" id="autoclose-dropdown" ngbDropdownToggle>Choose
+        Autoclose</button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <button class="dropdown-item" id="autoclose-true" (click)="autoClose = true">True</button>
         <button class="dropdown-item" id="autoclose-false" (click)="autoClose = false">False</button>
